@@ -1,5 +1,6 @@
 plugins {
-  id "com.github.ben-manes.versions" version "0.42.0"
+  id "com.github.ben-manes.versions" version "0.46.0"
+  id 'java-library'
   id 'maven-publish'
   id 'signing'
 }
@@ -7,13 +8,11 @@ plugins {
 repositories {
     mavenLocal()
     mavenCentral()
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
 }
 
-apply plugin:'java-library'
-
-group = 'com.github.calimero'
-version = '2.6-SNAPSHOT'
+group = 'io.calimero'
+version = '3.0-SNAPSHOT'
 
 sourceCompatibility = 19
 targetCompatibility = 19
@@ -25,13 +24,19 @@ javadoc.options.encoding = 'UTF-8'
 
 compileJava.options*.compilerArgs = [
 	'-Xlint:all',
-	'-Werror'
+	'-Xlint:-options',
+	"--limit-modules", "java.base,io.calimero.core",
+	"--add-reads", "io.calimero.serial.provider.rxtx=ALL-UNNAMED"
 ]
 
 compileTestJava.options*.compilerArgs = [
 	'-Xlint:all',
 	'-Xlint:-try',
 ]
+
+tasks.named('compileJava') {
+    options.javaModuleVersion = provider { project.version }
+}
 
 sourceSets {
     main {
@@ -50,21 +55,24 @@ java {
     withJavadocJar()
 }
 
-tasks.withType(Jar) {
-	from("${projectDir}") {
-        include 'LICENSE'
+javadoc {
+    options.addStringOption("-add-reads", "io.calimero.serial.provider.rxtx=ALL-UNNAMED")
+}
+
+tasks.withType(Jar).configureEach {
+    from("${projectDir}") {
+        include 'LICENSE.txt'
         into "META-INF"
     }
-    if (name.equals('sourcesJar')) {
-    	from("${projectDir}") {
-		    include 'README.md', 'build.gradle', 'settings.gradle', 'gradle*/**'
+    if (name == 'sourcesJar') {
+        from("${projectDir}") {
+            include 'README.md', 'build.gradle', 'settings.gradle', 'gradle*/**'
         }
     }
 }
 
 dependencies {
-    api "com.github.calimero:calimero-core:${version}"
-    api 'org.slf4j:slf4j-api:1.7.36'
+    api "io.calimero:calimero-core:${version}"
     implementation 'com.neuronrobotics:nrjavaserial:5.2.1'
 }
 
@@ -74,8 +82,8 @@ publishing {
             artifactId = rootProject.name
             from components.java
             pom {
-                name = 'Calimero RXTX Adapter'
-                description = 'Adapter to use the RXTX library for serial communication'
+                name = 'Calimero RXTX Provider'
+                description = 'Serial communication provider using RXTX'
                 url = 'https://github.com/calimero-project/calimero-rxtx'
                 licenses {
                     license {
@@ -90,7 +98,7 @@ publishing {
                     }
                 }
                 scm {
-                    connection = 'scm:git:git://github.com:calimero-project/calimero-rxtx.git'
+                    connection = 'scm:git:git://github.com/calimero-project/calimero-rxtx.git'
                     url = 'https://github.com/calimero-project/calimero-rxtx.git'
                 }
             }
@@ -99,8 +107,8 @@ publishing {
     repositories {
         maven {
             name 'maven'
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
+            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials(PasswordCredentials)
         }
